src/components/Navigation.module.scss
@import '../styles/colors';
@import '../styles/animations';
@import '../styles/responsive';

@mixin container-column-stretch {
  align-items: stretch;
  display: flex;
  flex-direction: column;
}

@mixin container-row-stretch {
  align-items: stretch;
  display: flex;
  flex-direction: row;
}

@mixin container-row-center {
  align-items: center;
  display: flex;
  flex-direction: row;
}

@mixin navigation-row {
  margin-bottom: 3.4rem;
}

.navigation {
  @include container-column-stretch;

  flex-grow: 1;
  overflow: hidden;
  padding: 3.4rem;
  padding-left: 5.5rem;

  @media (max-width: $mobile-max) {
    background-color: black;
    padding: 0;
    transition: all 0.5s ease-out, background 1s ease-out;
  }

  &:last-child {
    margin-bottom: 0;
  }

  .header {
    @include navigation-row;

    align-items: stretch;
    display: flex;
    flex-direction: column;
    flex-grow: 0;
    flex-shrink: 0;
    padding-left: calc(env(safe-area-inset-left));
    padding-right: calc(env(safe-area-inset-right));

    @media (max-width: $mobile-max) {
      align-items: center;
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      height: 44px;
      max-width: 100vw;
      margin: 0;
    }

    .navButton {
      display: none;
      width: 44px;
      height: 44px;

      @media (max-width: $mobile-max) {
        display: flex;
        margin-left: 1rem;
        margin-right: 2.1rem;
        transition: all 0.3s ease-in;
        z-index: 999;
      }
    }

    .siteTitle {
      display: flex;

      @media (max-width: $mobile-max) {
        opacity: 1;
        transform: scale(1) translateY(0);
        transition: transform 0.5s $cubic, opacity 0.6s $cubic;
      }
    }

    .tocButton {
      display: none;
      width: 44px;
      height: 44px;

      @media (max-width: $mobile-max) {
        display: flex;
        margin-left: 2.1rem;
        margin-right: 1rem;
        transition: all 0.3s ease-in;
        z-index: 999;
      }
    }
  }

  .navigationBar {
    @include navigation-row;

    align-items: flex-end;
    display: flex;
    flex-direction: column;
    flex-grow: 0;
    flex-shrink: 0;

    @media (max-width: $mobile-max) {
      align-items: stretch;
      display: flex;
      flex-direction: column;
      opacity: 0;
      position: fixed;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      pointer-events: none;
      transition: all 0.3s ease-in;
    }
  }

  .tableOfContents {
    @include navigation-row;
    @include container-row-stretch;

    flex-grow: 1;
    flex-shrink: 1;
    min-height: 0;
    justify-content: flex-end;

    @media (max-width: $small-screen-max) {
      margin-left: 0;
    }

    @media (max-width: $mobile-max) {
      margin: 0;
      opacity: 0;
      position: fixed;
      top: 0;
      left: 0;
      right: 0;
      bottom: 0;
      pointer-events: none;
      transition: all 0.3s ease-in;
    }
  }

  .siteFooter {
    align-items: stretch;
    display: flex;
    flex-direction: column;
    flex-grow: 0;
    flex-shrink: 1;
    justify-content: flex-end;

    @media (max-width: $mobile-max) {
      display: none;
    }

    &.growEnabled {
      flex-grow: 1;
    }
  }

  &.isButtonSelected {
    @media (max-width: $mobile-max) {
      height: 100vh;
      transition: all 0.3s ease-in, background 0.5s ease-in;
    }

    .siteTitle {
      opacity: 0;
      transform: scale(1.15) translateY(-30px);
      transition: transform 0.5s $cubic, opacity 0.6s $cubic;
    }
  }

  &.isNavButtonSelected {
    .header {
      .tocButton {
        opacity: 0;
        transform: translateX(44px);
        transition: all 0.3s ease-in;
      }
    }

    .tableOfContents {
      display: none;
      opacity: 0;
      transition: all 0.3s ease-in;
      pointer-events: none;
    }

    .navigationBar {
      display: flex;
      opacity: 1;
      transition: all 0.3s ease-in;
      pointer-events: auto;
    }
  }

  &.isTocButtonSelected {
    .header {
      .navButton {
        opacity: 0;
        transform: translateX(-44px);
        transition: all 0.3s ease-in;
      }
    }

    .tableOfContents {
      display: flex;
      opacity: 1;
      transition: all 0.3s ease-in;
      pointer-events: auto;
    }

    .navigationBar {
      display: none;
      opacity: 0;
      transition: all 0.3s ease-in;
      pointer-events: none;
    }
  }
}

@supports (
  (-webkit-backdrop-filter: blur(1.8em)) or (backdrop-filter: blur(2em))
) {
  .navigation {
    @media (max-width: $mobile-max) {
      -webkit-backdrop-filter: saturate(180%) blur(20px);
      backdrop-filter: saturate(180%) blur(20px);
      background-color: transparentize(black, 0.3);
    }
  }
}

